--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   width: 200px;
   top: 20%;
   left: 0;
-  animation: roaming1 60s linear infinite;
+  animation: roaming1 45s linear infinite;
 }
 
 #roam2 {
@@ -23,7 +23,7 @@
   width: 200px;
   top: 100%;
   right: 0;
-  animation: roaming2 60s linear infinite;
+  animation: roaming2 45s linear infinite;
 }
 
 #roam3 {
@@ -31,7 +31,7 @@
   width: 200px;
   top: 250%;
   left: 0;
-  animation: roaming3 60s linear infinite;
+  animation: roaming3 45s linear infinite;
 }
 
 #roam4 {
@@ -39,7 +39,7 @@
   width: 200px;
   top: 300%;
   right: 0;
-  animation: roaming4 60s linear infinite;
+  animation: roaming4 45s linear infinite;
 }
 
 @keyframes roaming1 {
@@ -50,15 +50,15 @@
     transform: translate(100%, 400%) rotate(-180deg);
   }
   60% {
-    transform: translate(500%, 800%) rotate(-180deg);
+    transform: translate(400%, 800%) rotate(-180deg);
   }
 }
 @keyframes roaming2 {
   20% {
-    transform: translate(-600%, 200%) rotate(-180deg);
+    transform: translate(-500%, 200%) rotate(-180deg);
   }
   40% {
-    transform: translate(-400%, 500%) rotate(-180deg);
+    transform: translate(-300%, 500%) rotate(-180deg);
   }
   60% {
     transform: translate(-100%, 600%) rotate(-180deg);
@@ -72,14 +72,17 @@
     transform: translate(100%, -100%) rotate(-180deg);
   }
   60% {
-    transform: translate(400%, -500%) rotate(-180deg);
+    transform: translate(300%, -500%) rotate(-180deg);
   }
 }
 @keyframes roaming4 {
-  25% {
-    transform: translate(-100%, 200%) rotate(-180deg);
+  20% {
+    transform: translate(-200%, 200%) rotate(-180deg);
   }
-  50% {
-    transform: translate(-200%, -800%) rotate(-180deg);
+  40% {
+    transform: translate(-100%, -100%) rotate(-180deg);
+  }
+  60% {
+    transform: translate(-300%, -500%) rotate(-180deg);
   }
 }/*# sourceMappingURL=style.css.map */
