--- a/style.sass
+++ b/style.sass
@@ -13,28 +13,21 @@
     top: 50%
     left: 10%
     animation: roaming1 30s alternate infinite
-
 #roam2
     @include roam-list
     top: 100%
     right: 10%
     animation: roaming2 30s alternate infinite
-
-
 #roam3
     @include roam-list
     top: 150%
     left: 10%
     animation: roaming3 30s alternate infinite
-
 #roam4
     @include roam-list
     top: 200%
     right: 10%
     animation: roaming4 30s alternate infinite
-
-
-
 @keyframes roaming1 
     0% 
         transform: translate(0, 0) rotate(-360deg)
@@ -58,3 +51,11 @@
         transform: translate(0, 0) rotate(360deg)
     100%
         transform: translate(0, -200%) rotate(-360deg)
+
+.divider
+    width: 100%
+    height: 2rem
+    background-color: rgba(0,0,0,0.1)
+    border: solid rgba(0,0,0,.15)
+    border-width: 1px 0
+    box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, .1), inset 0 0.125em 0.5em rgba(0, 0, 0, .15)
