--- a/style.css
+++ b/style.css
@@ -81,4 +81,23 @@
 
 .article-card {
   height: 400px;
+}
+
+.about-content-two {
+  height: 100vh;
+  background-color: peachpuff;
+}
+
+.box-container {
+  height: 100%;
+}
+
+.box1 {
+  width: 100%;
+  height: 100%;
+}
+
+.box2 {
+  width: 100%;
+  height: 50%;
 }/*# sourceMappingURL=style.css.map */
