--- a/style.css
+++ b/style.css
@@ -42,34 +42,42 @@
   0% {
     transform: translate(0, 0) rotate(-360deg);
   }
+
   100% {
     transform: translate(0, 200%) rotate(360deg);
   }
 }
+
 @keyframes roaming2 {
   0% {
     transform: translate(0, 0) rotate(360deg);
   }
+
   100% {
     transform: translate(0, -200%) rotate(-360deg);
   }
 }
+
 @keyframes roaming3 {
   0% {
     transform: translate(0, 0) rotate(-360deg);
   }
+
   100% {
     transform: translate(0, 200%) rotate(360deg);
   }
 }
+
 @keyframes roaming4 {
   0% {
     transform: translate(0, 0) rotate(360deg);
   }
+
   100% {
     transform: translate(0, -200%) rotate(-360deg);
   }
 }
+
 .divider {
   width: 100%;
   height: 2rem;
@@ -81,4 +89,14 @@
 
 .article-card {
   height: 400px;
-}/*# sourceMappingURL=style.css.map */
+}
+
+/*# sourceMappingURL=style.css.map */
+
+.access {
+  display: none;
+}
+
+.accessOn {
+  display: none;
+}
